[package]
name = "denali_js"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
cel = "0.13.0"
form_urlencoded = "1.2.2"
futures = "0.3.32"
glob = "0.3.3"
napi = { version = "3.8.3", features = ["async", "anyhow", "serde-json"] }
napi-derive = "3.5.2"
percent-encoding = "2.3.2"
pingora = { version = "0.8.0", features = ["openssl", "proxy", "lb", "cache", "time"] }
pingora-limits = "0.8.0"
pingora-runtime = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
regex = "1.12.2"
http = "1.3.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
